# idedup

./: .gitignore  .pre-commit-config.yaml  README.md  idedup  pyproject.toml
.github/: pull_request_template.md
src/idedup/: main.py
tests/: test.txt  test_main.py
