[project]
name = "idedup"
version = "0.2.0"
description = "dedup with index"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
idedup = "idedup.main:main"

[[tool.uv.index]]
name = "testidedup"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
